# sendbee-python-api-client

./: .gitignore  .travis.yml  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
sendbee_api/: __init__.py  auth.py  bind.py  client.py  constants.py  debug.py  exceptions.py  fields.py  formatter.py  models.py  response.py
sendbee_api/automation/: client.py  models.py  query_params.py
sendbee_api/contacts/: client.py  models.py  query_params.py
sendbee_api/conversations/: client.py  models.py  query_params.py
sendbee_api/convresations/: client.py  models.py  query_params.py
sendbee_api/messages/: client.py  models.py  query_params.py
sendbee_api/rate_limit/: client.py  models.py  query_params.py
sendbee_api/teams/: client.py  models.py  query_params.py
tests/: conftest.py  example.py  test_api.py  test_auth.py  test_bind_request.py  test_client.py  test_endpoints_smoke.py  test_fields.py  test_formatter.py  test_models.py  test_query_params.py  test_response.py
